--- a/homework/session1/session1-homework.ipynb
+++ b/homework/session1/session1-homework.ipynb
@@ -877,7 +877,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\awon\\AppData\\Local\\Temp\\ipykernel_5588\\3160646506.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\awon\\AppData\\Local\\Temp\\ipykernel_4488\\3160646506.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -1145,7 +1145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13",
    "language": "python",
    "name": "python3"
   },
@@ -1160,6 +1160,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "48f529307865c14dd3def9bda308661fa399bb0146de6f7750d8ba764ab34399"
+   }
   }
  },
  "nbformat": 4,
