--- a/homework/session2/session2-homework.ipynb
+++ b/homework/session2/session2-homework.ipynb
@@ -1839,7 +1839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 (conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
