Update session5 notebook

--- a/05-deployment/model-deployment-notebook.ipynb
+++ b/05-deployment/model-deployment-notebook.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -33,6 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load churn data and perform preprocessing\n",
     "df = pd.read_csv('../03-classification/churn-data.csv')\n",
     "\n",
     "df.columns = df.columns.str.lower().str.replace(' ', '_')\n",
@@ -55,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split to train and test\n",
     "df_full_train, df_test = train_test_split(df, test_size=0.2, random_state=1)"
    ]
   },
@@ -65,6 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Lists of categorical and numerical columns\n",
     "numerical = ['tenure', 'monthlycharges', 'totalcharges']\n",
     "\n",
     "categorical = [\n",
@@ -94,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to train model\n",
     "def train(df_train, y_train, C=1.0):\n",
     "    dicts = df_train[categorical + numerical].to_dict(orient='records')\n",
     "\n",
@@ -113,11 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to make predictions\n",
     "def predict(df, dv, model):\n",
     "    dicts = df[categorical + numerical].to_dict(orient='records')\n",
     "\n",
     "    X = dv.transform(dicts)\n",
-    "    y_pred = model.predict_proba(X)[:, 1]\n",
+    "    y_pred = model.predict_proba(X)[:, 1] # extract second columns of all rows\n",
     "\n",
     "    return y_pred"
    ]
@@ -129,6 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parameters for KFold cross validation\n",
     "C = 1.0\n",
     "n_splits = 5"
    ]
@@ -148,9 +155,10 @@
     }
    ],
    "source": [
+    "# Apply KFold cross validation\n",
     "kfold = KFold(n_splits=n_splits, shuffle=True, random_state=1)\n",
     "\n",
-    "scores = []\n",
+    "scores = [] # list to store AUC scores\n",
     "\n",
     "for train_idx, val_idx in kfold.split(df_full_train):\n",
     "    df_train = df_full_train.iloc[train_idx]\n",
@@ -190,6 +198,7 @@
     }
    ],
    "source": [
+    "# AUC scores after 5 iterations (n_splits=5)\n",
     "scores"
    ]
   },
@@ -211,10 +220,12 @@
     }
    ],
    "source": [
+    "# Train model on full train data and make predictions on test data\n",
     "dv, model = train(df_full_train, df_full_train.churn.values, C=1.0)\n",
     "y_pred = predict(df_test, dv, model)\n",
     "y_test = df_test.churn.values\n",
     "\n",
+    "# Calculate AUC score on test data\n",
     "auc = roc_auc_score(y_test, y_pred)\n",
     "auc"
    ]
@@ -244,7 +255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = f'model_C={C}.bin'"
+    "output_file = f'model_C={C}.bin' # parameter C is C=1.0"
    ]
   },
   {
@@ -285,7 +296,7 @@
    "source": [
     "f_out = open(output_file, 'wb')\n",
     "pickle.dump((dv, model), f_out)\n",
-    "f_out.close()"
+    "f_out.close() # must close the file manually"
    ]
   },
   {
@@ -303,6 +314,7 @@
     }
    ],
    "source": [
+    "# Check the model size and file permissions\n",
     "!ls -lh *.bin"
    ]
   },
@@ -321,6 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save file using context manager\n",
     "with open(output_file, 'wb') as f_out:\n",
     "    pickle.dump((dv, model), f_out)"
    ]
@@ -400,6 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Customer data in dictionary format\n",
     "customer = {\n",
     "    'gender': 'female',\n",
     "    'seniorcitizen': 0,\n",
@@ -430,6 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Transform customer data\n",
     "X = dv.transform([customer])"
    ]
   },
@@ -440,6 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions\n",
     "y_pred = model.predict_proba(X)[0, 1]"
    ]
   },
@@ -465,11 +481,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "63a156bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "eabe54d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'http://localhost:9696/predict'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7d3a7d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Send post request to our local host url\n",
+    "response = requests.post(url, json=customer) # send customer dict as json\n",
+    "\n",
+    "# Check reponse (200 means the request has succeeded)\n",
+    "response "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "68438ea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'churn': True, 'churn_probability': 0.5133820686186413}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use 'json()' function to see the body of the response\n",
+    "response = response.json()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "63f7e0ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending email to asdx-123d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Conditional to send promotional email\n",
+    "if response['churn']:\n",
+    "    print('Sending email to', 'asdx-123d')"
+   ]
   }
  ],
  "metadata": {
