Complete session5 README and add code directory

--- a/05-deployment/code/model-deployment-notebook.ipynb
+++ b/05-deployment/code/model-deployment-notebook.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "63a156bc",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
+   "id": "e6996cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer = {\n",
+    "    'gender': 'female',\n",
+    "    'seniorcitizen': 0,\n",
+    "    'partner': 'yes',\n",
+    "    'dependents': 'no',\n",
+    "    'phoneservice': 'no',\n",
+    "    'multiplelines': 'no_phone_service',\n",
+    "    'internetservice': 'dsl',\n",
+    "    'onlinesecurity': 'no',\n",
+    "    'onlinebackup': 'yes',\n",
+    "    'deviceprotection': 'no',\n",
+    "    'techsupport': 'no',\n",
+    "    'streamingtv': 'no',\n",
+    "    'streamingmovies': 'no',\n",
+    "    'contract': 'month-to-month',\n",
+    "    'paperlessbilling': 'yes',\n",
+    "    'paymentmethod': 'electronic_check',\n",
+    "    'tenure': 1,\n",
+    "    'monthlycharges': 29.85,\n",
+    "    'totalcharges': 29.85\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "eabe54d2",
    "metadata": {},
    "outputs": [],
@@ -501,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "id": "7d3a7d23",
    "metadata": {},
    "outputs": [
@@ -511,7 +541,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,17 +556,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "id": "68438ea6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'churn': True, 'churn_probability': 0.5133820686186413}"
+       "{'churn': True, 'churn_probability': 0.6363584152746705}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "63f7e0ca",
    "metadata": {},
    "outputs": [
