Update session6 notebook

--- a/06-trees/credit-risk-scoring.ipynb
+++ b/06-trees/credit-risk-scoring.ipynb
@@ -1541,7 +1541,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6545312537841176"
+       "0.6640369572061708"
       ]
      },
      "execution_count": 29,
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "b5f95536",
    "metadata": {},
    "outputs": [
@@ -1581,7 +1581,7 @@
        "1.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "b2ec56bf",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
        "DecisionTreeClassifier(max_depth=2)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "163d6385",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "7f53867d",
    "metadata": {},
    "outputs": [
@@ -1671,16 +1671,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|--- records=no <= 0.50\n",
-      "|   |--- seniority <= 6.50\n",
-      "|   |   |--- class: 1\n",
-      "|   |--- seniority >  6.50\n",
-      "|   |   |--- class: 0\n",
-      "|--- records=no >  0.50\n",
+      "|--- records=yes <= 0.50\n",
       "|   |--- job=partime <= 0.50\n",
       "|   |   |--- class: 0\n",
       "|   |--- job=partime >  0.50\n",
       "|   |   |--- class: 1\n",
+      "|--- records=yes >  0.50\n",
+      "|   |--- seniority <= 6.50\n",
+      "|   |   |--- class: 1\n",
+      "|   |--- seniority >  6.50\n",
+      "|   |   |--- class: 0\n",
       "\n"
      ]
     },
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "092aa3b6",
    "metadata": {},
    "outputs": [
@@ -1722,7 +1722,7 @@
        "0.6058644740984719"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
