Revert "Update notebook6"
This reverts commit d47dbd4485672649026c84ac27da4cc37da12079.

--- a/06-trees/credit-risk-scoring.ipynb
+++ b/06-trees/credit-risk-scoring.ipynb
@@ -8145,9 +8145,7 @@
     "\n",
     "Generally, xgboost models perform well on tabular data as compare to other models but the down side is that xgboost models have so tunable parameter and the reason why these models need more attention to optimize their performance.\n",
     "\n",
-    "Next, we'll save our best model to use it for the deployment. The model will be saved in `json` format using Python `pickle` library.\n",
-    "\n",
-    "*Caution*: According to XGBoost [docs](https://xgboost.readthedocs.io/en/stable/tutorials/saving_model.html#loading-pickled-file-from-different-version-of-xgboost) saving XGBoost model using pickle is not recommended due to the unstability issues. However, for demonstration purpose we'll save the file with pickle."
+    "Next, we'll save our best model to use it for the deployment. The model will be saved in `json` format using Python `pickle` library."
    ]
   },
   {
