--- a/07-bentoml-production/code/bentoml-credit-risk-scoring.ipynb
+++ b/07-bentoml-production/code/bentoml-credit-risk-scoring.ipynb
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "b04404ff",
    "metadata": {},
    "outputs": [],
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "47eef20b",
    "metadata": {},
    "outputs": [
@@ -1384,7 +1384,7 @@
        "0.8324067738624701"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "d463251b",
    "metadata": {},
    "outputs": [],
@@ -1417,17 +1417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "1c9c4010",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Model(tag=\"credit_risk_model:lrfei4kptwt6qhdv\", path=\"C:\\Users\\awon\\bentoml\\models\\credit_risk_model\\lrfei4kptwt6qhdv\\\")"
+       "Model(tag=\"credit_risk_model:77k2l4kp26vzehdv\", path=\"C:\\Users\\awon\\bentoml\\models\\credit_risk_model\\77k2l4kp26vzehdv\\\")"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "1905247b",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "37fc1ac8",
    "metadata": {},
    "outputs": [
