--- a/07-bentoml-production/code/bentoml-credit-risk-scoring.ipynb
+++ b/07-bentoml-production/code/bentoml-credit-risk-scoring.ipynb
@@ -1420,23 +1420,42 @@
    "execution_count": 29,
    "id": "1c9c4010",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Save the model without setting batchable\n",
+    "# bentoml.xgboost.save_model('credit_risk_model',\n",
+    "#                             model,\n",
+    "#                             custom_objects={'DictVectorizer': dv})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "51a666ce",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Model(tag=\"credit_risk_model:77k2l4kp26vzehdv\", path=\"C:\\Users\\awon\\bentoml\\models\\credit_risk_model\\77k2l4kp26vzehdv\\\")"
+       "Model(tag=\"credit_risk_model:sqpk64ssg6mlmhdv\", path=\"C:\\Users\\awon\\bentoml\\models\\credit_risk_model\\sqpk64ssg6mlmhdv\\\")"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Save xgboost model\n",
+    "# Save the model batchable settings for production efficiency\n",
     "bentoml.xgboost.save_model('credit_risk_model',\n",
     "                            model,\n",
-    "                            custom_objects={'DictVectorizer': dv})"
+    "                            custom_objects={'DictVectorizer': dv},\n",
+    "                           signatures={  # model signatures for runner inference\n",
+    "                               'predict': { \n",
+    "                                   'batchable': True, \n",
+    "                                   'batch_dim': 0 # '0' means bentoml will concatenate request arrays by first dimension\n",
+    "                               }\n",
+    "                           })"
    ]
   },
   {
@@ -1449,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "1905247b",
    "metadata": {},
    "outputs": [],
@@ -1459,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "37fc1ac8",
    "metadata": {},
    "outputs": [
